# gst-plugin-smoothing

./: .project  README  configure.ac
src/: Makefile.am  gstsmoothingfilter.c  gstsmoothingfilter.h
